[package]
name = "gizmo"
version = "0.1.0"
authors = ["Chance Snow <git@chancesnow.me>"]
build = "./src/build.rs"

[dependencies.webrender]
git = "https://github.com/servo/webrender"

[dependencies.webrender_api]
git = "https://github.com/servo/webrender"

[dependencies.kay]
path = "../kay"

[dependencies.compact]
path = "../compact"

[dependencies.compact_macros]
path = "../compact_macros"

[dependencies.descartes]
path = "../descartes"
features = ["compact_containers"]

[dependencies.monet]
path = "../monet"

[dependencies]
euclid = "0.17.3"

[build-dependencies]
kay_codegen = {path = "../kay_codegen/"}
